# asr_service

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.devcontainer/: Dockerfile.cpu  Dockerfile.gpu  devcontainer.json  docker-compose.yaml  docker-compose.yml
notebooks/: temp.ipynb
src/asr_service/: config.py  pipeline.py  schema.py  utils.py
