[tool.poetry]
name = "asr_service"
version = "0.1.0"
description = ""
authors = ["TJ"]
packages = [
    { include = "asr_service", from = "src" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "2.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
